--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discord-api-types": "^0.37.119",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "nodemon": "^3.1.9",
     "openai": "^4.85.3",
     "uuid": "^11.1.0"
